RESOLVED FIXED211348
Sometimes cannot find <textarea> in list of editable elements
https://bugs.webkit.org/show_bug.cgi?id=211348
Summary Sometimes cannot find <textarea> in list of editable elements
Daniel Bates
Reported 2020-05-03 00:49:39 PDT
Consider a page with the following markup: [[ <textarea style="width: 500px; height: 500px">So few words to fill such a big space...</textarea> ]] If you call Page::editableElementsInRect() (directly or via -_requestTextInputContextsInRect:completionHandler:) with a rect that is in an empty part of the <textarea> then it will NOT find it. But it should find it. Need to add form control bounds to editable region instead of the bounds of its inner text element.
Attachments
Patch (17.02 KB, patch)
2020-05-03 01:06 PDT, Daniel Bates
no flags
Patch (17.08 KB, patch)
2020-05-03 01:18 PDT, Daniel Bates
no flags
To Land (17.91 KB, patch)
2020-05-03 13:52 PDT, Daniel Bates
no flags
Daniel Bates
Comment 1 2020-05-03 00:49:47 PDT
Daniel Bates
Comment 2 2020-05-03 01:06:53 PDT
Daniel Bates
Comment 3 2020-05-03 01:18:10 PDT
Daniel Bates
Comment 4 2020-05-03 06:59:43 PDT
Just need to rebase results of some tests...
Daniel Bates
Comment 5 2020-05-03 13:52:53 PDT
Daniel Bates
Comment 6 2020-05-03 13:53:29 PDT
Daniel Bates
Comment 7 2020-05-03 13:53:51 PDT
BTW thanks for the review, Simon!
Note You need to log in before you can comment on or make changes to this bug.