Source/WebCore/rendering/EventRegion.h
@@ -46,7 +46,7 @@ public:
     void pushClip(const IntRect&);
     void popClip();
 
-    void unite(const Region&, const RenderStyle&);
+    void unite(const Region&, const RenderStyle&, bool overrideUserModifyIsEditable = false);
     bool contains(const IntRect&) const;
 
 private:
@@ -65,8 +65,8 @@ public:
 
     WEBCORE_EXPORT bool operator==(const EventRegion&) const;
 
-    WEBCORE_EXPORT void unite(const Region&, const RenderStyle&);
-    WEBCORE_EXPORT void translate(const IntSize&);
+    void unite(const Region&, const RenderStyle&, bool overrideUserModifyIsEditable = false);
+    void translate(const IntSize&);
 
     bool contains(const IntPoint& point) const { return m_region.contains(point); }
     bool contains(const IntRect& rect) const { return m_region.contains(rect); }
